Bug fix (Error message during successful stock-lookup)

--- a/app/views/stocks/_lookup.html.erb
+++ b/app/views/stocks/_lookup.html.erb
@@ -13,6 +13,8 @@
     </div>
   </div>
   <% end %>
+  <%= render 'common/spinner' %>
+ 
   <% if @stock %>
     <div id="stock-lookup-results" class= "well results-block">
       <strong>Symbol:</strong> <%= @stock.ticker %>
